# delo_llm_project

./: README.md  evaluation.ipynb  generate_preds.ipynb  pyproject.toml  requirements.txt
Classes/: BaseRAGEngine.py  Chunker.py  EmbeddingStore.py  LocalRAGEngine.py  ModelBuilder.py  MyAgent.py  MyPDFReader.py  ParamsLoader.py  PredictionGenerator.py  RAGEngine.py  Retriever.py  WebRAGEngine.py  WebSearchTool.py
Classes/DocumentProcessing/: Chunker.py  MyPDFReader.py
Classes/GloomHavenAgent/: MyAgent.py  PredictionGenerator.py
Classes/RAG/: BaseRAGEngine.py  LocalRAGEngine.py  WebRAGEngine.py
Classes/Retrieval/: EmbeddingStore.py  Retriever.py
Classes/Tools/: ResponseParser.py
DataClasses/: EmbeddedChunk.py  Page.py
Utils/: eval_predictions.json  params.yaml
data/: eval_dataset.json
src/gloomhaven_agent/: MyAgent.py  PredictionGenerator.py
src/gloomhaven_agent/document_processing/: Chunk.py  Chunker.py  MyPDFReader.py
src/gloomhaven_agent/rag/: BaseRAGEngine.py  LocalRAGEngine.py  WebRAGEngine.py
src/gloomhaven_agent/retrieval/: EmbeddedChunk.py  EmbeddingStore.py  Retriever.py
src/gloomhaven_agent/tools/: WebSearchTool.py
